Fixed overflows

--- a/style.css
+++ b/style.css
@@ -230,6 +230,9 @@
   flex-shrink: 0;
   box-shadow: 0px 2px 20px -1px rgba(0, 0, 0, 0.25);
 }
+.card-img{
+  overflow-y: hidden;
+}
 .card-img > img {
   width: 100%;
   height: 100%;
